# dip_learning

./: .gitignore  CMakeLists.bak  CMakeLists.txt  README.md  build.sh  compile.sh  dip.md  main.cpp  test-main.cpp
app/: CMakeLists.txt  app-match-template.cpp  main.cpp  match-sift.cpp  test-main.cpp
docs/: matchTemplate.md  图像特征点.md
include/: guided_filter.hpp
lib/Solution/: CMakeLists.txt
lib/Solution/include/: Solution.h
lib/match/: CMakeLists.txt
lib/match/include/: Match.h
lib/match/src/: Match.cpp
opencv-cmake/: CMakeLists.txt  main.cpp
opencv-cmake/include/: CMakeLists.txt
opencv-cmake/src/: CMakeLists.txt  empty_src_for_compile.cpp
opencv-feature_match-cmake/: .gitignore  README.md  main.cpp
opencv-feature_match-cmake/include/: CMakeLists.txt  empty_src_for_compile.h  match.h
opencv-feature_match-cmake/src/: CMakeLists.txt  match.cpp
src/: CMakeLists.txt  empty_src_for_compile.cpp
src/Solution/: CMakeLists.txt  Solution.cpp
src/include/Solution/: Solution.h
